fixed cardGAP

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -10,7 +10,7 @@
   padding: 1.5rem;
   border-radius: 8px;
   box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
-  gap: 0.7rem;
+  gap: 1.6rem;
   text-align: center;
   cursor: pointer;
   .card-container__row {
